<resources>
    <string name="app_name">Task Monitor</string>
    <!-- Strings used for fragments for navigation -->

    <string name="description">Task Description</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="title">Task Title</string>
    <string name="tabAll">All</string>
    <string name="tabWork">Work</string>
    <string name="tabSchool">School</string>
    <string name="tabAppointment">Appointment</string>
    <string name="tabProductivity">Productivity</string>
    <string name="tabOthers">Others</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string-array name="category_array">
        <item>Select Category</item>
        <item>FITNESS</item>
        <item>WORK</item>
        <item>SCHOOL</item>
        <item>APPOINTMENT</item>
        <item>PRODUCTIVITY</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="sortBy">
        <item><b>Default</b></item>
        <item><b>Priority ▼</b></item>
        <item><b>Priority ▲</b></item>
        <item><b>Date ▲</b></item>
        <item><b>Date ▼</b></item>
    </string-array>
    

</resources>