<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".presentation.AddActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="420dp"
        tools:ignore="contentDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/p_square" />

    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="565dp"
        android:scaleType="fitStart"
        android:src="@drawable/calender"
        tools:ignore="contentDescription"/>

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="203dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:autofillHints="@string/title"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/date"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="277dp"
        android:gravity="center"
        android:hint="@string/yyyy_mm_dd"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="267dp"
        android:layout_height="71dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="327dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:autofillHints="@string/description" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="406dp"
        android:gravity="center_vertical"
        android:text="@string/priority"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/highPriority"
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="379dp"
        android:layout_marginBottom="406dp"
        android:text="@string/high" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginBottom="146dp"
        android:backgroundTint="@color/blue"
        android:onClick="saveBtnOnClick"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="146dp"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:text="@string/cancel"
        android:focusable="true" />

    <Spinner
        android:id="@+id/dropDown"
        android:layout_width="285dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="512dp"
        android:layout_marginBottom="287dp"
        android:gravity="center"
        android:scrollbarSize="8dp" />

</RelativeLayout>