<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ViewTaskActivity"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/blue">


        <TextView
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cherry_cream_soda"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginStart="105dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:layout_marginTop="5dp"
            android:onClick="addTaskBtnOnClick"
            android:foreground="@drawable/ic_baseline_add_24"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:foregroundTint="@color/white"
            app:backgroundTint="@color/blue"
            app:borderWidth="16dp"
            app:rippleColor="@color/white"
            tools:ignore="contentDescription"
            android:layout_marginStart="190dp"
            tools:targetApi="m" />


    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabview_activity"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/blue"
        android:contextClickable="true"

        app:tabIconTint="@color/grey"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="5dp"
        app:tabSelectedTextColor="@color/white"
        app:tabMode="scrollable"
        app:tabRippleColor="@color/white"

        app:tabTextAppearance="@style/CustomTabText"
        app:tabTextColor="@color/white"
        tools:targetApi="m">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAllTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"

            android:text="@string/tabAll" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"

            android:text="@string/tabWork" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"

            android:text="@string/tabSchool" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"

            android:text="@string/tabAppointment" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabProductivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:text="@string/tabProductivity" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMislenious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:text="@string/tabOthers" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:targetApi="m">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>
